Updated ignore for eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+target
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +11,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# IDEA-related project files
+/.idea
+*.iml
+
+# Eclipse project files
+.classpath
+.project
+.settings
+
+
+# Manifests
+MANIFEST.MF
+
